--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([libsimplerootlibrary], [1.0], [https://bugs.launchpad.net/libsimplerootlibrary])
+AC_INIT([simplerootlibrary], [1.0], [https://bugs.launchpad.net/simplerootlibrary])
 AC_CONFIG_SRCDIR([include/LinkDef.h])
 AC_CONFIG_HEADER([config.h])
 
@@ -14,7 +14,7 @@ ROOT_PATH( [5.34/00] ,
 	[ AC_MSG_ERROR( [You must install ROOT (version 5.34/00 or later) before installing fazia-gui] ) ]
 )
 
-CREATE_ROOT_LIB_MAKEFILE([simplerootlibrary],[src],[include],[include/LinkDef.h])
+CREATE_ROOT_LIB_MAKEFILE([simplerootlibrary],[0:0:0],[src],[include],[include/LinkDef.h])
 
 # The following line will not work without ACLOCAL_AMFLAGS 	= -I m4 in top-level Makefile.am
 # See http://www.gnu.org/software/autoconf/manual/autoconf.html#index-AC_005fCONFIG_005fMACRO_005fDIR-62
