--- a/Makefile.am.in
+++ b/Makefile.am.in
@@ -1,7 +1,6 @@
 # The following line is essential because we have AC_CONFIG_MACRO_DIR([m4]) in configure.ac
 # See http://www.gnu.org/software/autoconf/manual/autoconf.html#index-AC_005fCONFIG_005fMACRO_005fDIR-62
 ACLOCAL_AMFLAGS 	      = -I m4
-AM_LDFLAGS              = @root_lib_ldflags@
 LDFLAGS                 = -L@ROOTLIBDIR@ @ROOTGLIBS@ @ROOTAUXLIBS@
 LIBS  		            = $(ROOTGLIBS)
 
@@ -9,6 +8,8 @@ LIBS  		            = $(ROOTGLIBS)
 
 @root_makefile_libname@_la_SOURCES = @root_makefile_sources@
 nodist_@root_makefile_libname@_la_SOURCES = @root_cint_sources@
+
+@root_makefile_libname@_la_LDFLAGS = -shared @root_lib_ldflags@
 
 dist_noinst_HEADERS     = @root_cint_linkdef@
 dist_include_HEADERS    = @root_makefile_headers@
