--- a/Makefile.am.in
+++ b/Makefile.am.in
@@ -1,7 +1,7 @@
 # The following line is essential because we have AC_CONFIG_MACRO_DIR([m4]) in configure.ac
 # See http://www.gnu.org/software/autoconf/manual/autoconf.html#index-AC_005fCONFIG_005fMACRO_005fDIR-62
 ACLOCAL_AMFLAGS 	      = -I m4
-LDFLAGS                 = -L@ROOTLIBDIR@ @ROOTGLIBS@ @ROOTAUXLIBS@
+LDFLAGS                 = -L$(ROOTLIBDIR) $(ROOTGLIBS) $(ROOTAUXLIBS)
 LIBS  		            = $(ROOTGLIBS)
 
 @root_lib_libtype@_LTLIBRARIES = @root_makefile_libname@.la
